<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StockInfoActivity">

    <TextView
        android:id="@+id/stockSymbolTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_symbol_string"
        android:textSize="25sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/stockNameTitle"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/symbolOfStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/red"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/nameOfStock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stockSymbolTitle" />

    <TextView
        android:id="@+id/nameOfStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/blue"
        android:textSize="25sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stockNameTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/priceOfStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/pink"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/stockPriceTitle"
        app:layout_constraintTop_toBottomOf="@+id/nameOfStock" />

    <TextView
        android:id="@+id/stockNameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stock_name_string"
        android:textColor="@color/black"

        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/stockSymbolTitle"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/stockPriceTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_string"
        android:textSize="25sp"
        android:textColor="@color/black"

        app:layout_constraintEnd_toEndOf="@+id/stockSymbolTitle"
        app:layout_constraintTop_toBottomOf="@+id/stockNameTitle" />

    <TextView
        android:id="@+id/locationOfStock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textColor="@color/green"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/priceOfStock" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_string"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="@+id/stockPriceTitle"
        app:layout_constraintTop_toBottomOf="@+id/stockPriceTitle" />

    <Button
        android:id="@+id/stockInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_into_device_string"
        android:textColor="@color/white"
        android:onClick="saveData"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />
</androidx.constraintlayout.widget.ConstraintLayout>